@@ -3,8 +3,10 @@ partman-auto (74) UNRELEASED; urgency=low
   * Don't create the last partition as a logical partition when all partitions
     are defined as primary and there are sufficient primary partitions
     available. Closes: #413505.
+  * Make it possible to use a primary partition for LVM. Thanks to Grégory
+    Oestreicher for spotting the issue and providing an initial patch.
 
- -- Frans Pop <fjp@debian.org>  Tue, 15 Jan 2008 10:47:03 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 16 Jan 2008 09:39:12 +0100
 
 partman-auto (73) unstable; urgency=low
 
